--- a/src/css/UserAccountStatusHeader.scss
+++ b/src/css/UserAccountStatusHeader.scss
@@ -1,31 +1,14 @@
 @import "util.scss";
+@import "Status.scss";
 
 .UserAccountStatusHeader_Popover {
     max-width: 25em;
 
     .status {
+        @extend .Status_base;
         display: inline-block;
         height: 1em;
         width: 1em;
         margin-right: 0.5em;
-        mask-size: contain !important;
-
-        &.active,
-        &.inactive {
-            mask: url("#{$img}/status.svg");
-        }
-
-        &.active {
-            background-color: limegreen;
-        }
-
-        &.inactive {
-            background-color: red;
-        }
-
-        &.invited {
-            mask: url("#{$img}/pending-invitation.svg");
-            background-color: black;
-        }
     }
 }
