--- a/src/App.css
+++ b/src/App.css
@@ -201,29 +201,113 @@ td .inactive {
     line-height: inherit;
 }
 
-.statsPanelContent {
-    display: flex;
-    justify-content: space-between;
-}
+/* DashboardTab : */
 
-.statsPanelsContainer {
+.dashboardPanelsContainer {
     display: flex;
     font-size: 18px;
     font-family: "Open Sans", Arial, Helvetica, sans-serif;
+    padding: 1.25rem;
+    align-items: space-between;
 }
 
-.statsPanel {
-    flex-grow: 1;
-    margin: 2vw;
-    background-color: #337ab7;
+.dashboardPanel {
+    display: flex;
+    width: 100%;
+    flex: 1;
+    margin: 1.25rem;
+    background-color: white;
+}
+
+#tabs-tabpane-dashboard .dashboardPanel{
+    margin-left: unset;
+}
+
+.dashboardPanel .card-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.dashboardPanelSection {
+    padding: 1rem;
+    font-size: 1rem;
+}
+
+.watcha-legend {
+    margin: 0.5rem;
+    padding: 1rem;
+    font-size: 1rem;
+    font-weight: bold;
+    width: auto;
+}
+
+.watcha-fieldset {
+    border: 2px solid;
+    border-width: 80%;
+    width: 100%;
+}
+
+.dashboardPanelSection tr:first-child td {
+    border: none;
+    margin-left: 1rem;
+}
+
+.watcha-fieldset tr:first-child td {
+    border: none;
+    margin-left: 1rem;
+}
+
+.sectionPanelData {
+    text-align: right;
+    font-weight: bold;
+}
+
+.sectionPanelAdminListLabel .card-header {
+    padding: unset;
+    background-color: unset;
+    border: unset;
+    display: inline-block;
+}
+
+.sectionPanelAdminListLabel .card-header:hover {
+    background-color: darkturquoise;
+    cursor: pointer;
     color: white;
 }
 
-.statsPanelFooter:hover{
+.sectionPanelAdminListLabel .card {
+    margin: unset;
+    border: unset;
+}
+
+.sectionPanelAdminListLabel .adminUserRow:hover {
+    background-color: darkturquoise;
+    cursor: pointer;
+    color: white;
+}
+
+.dashboardAdministrateButton:hover {
     cursor: pointer;
     background-color: darkturquoise;
-    text-decoration: underline;
+    border-color: darkturquoise;
 }
+
+.noRoomsMessage {
+    font-weight: bold;
+}
+
+.tooltipMessage {
+    font-style: italic;
+}
+
+#tabs-tabpane-dashboard .refreshButton {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+}
+
+/* end of DashboardTab : */
 
 .dismissRight {
     cursor: pointer;
