Watcha op332 add a modal dialog for room creation (require matrix-react-sdk/pull/96) (#29)
* feat: add the NewRoomButton component

* fix: typo

* feat: wrap riot room creation modal in an iframe

* refactor: remove useless i18n

* fix: change riot subdir to /app

* fix: retore type header i18n

* fix: rollback to legacy css

* fix: rollback useless i18n modification order

* fix: resize the modal to the dimensions of the riot one

* fix: add a title for iframe to resolve linter warning

--- a/src/App.css
+++ b/src/App.css
@@ -165,6 +165,20 @@ col.status {
     background-color: darkgrey !important;
 }
 
+td .active {
+    color: green;
+}
+
+td .inactive {
+    color: red;
+}
+
+.newRoomIframe {
+    width: 510px;
+    height: 278px;
+    border: 0;
+}
+
 .bottomButtons {
     margin: auto;
     width: 200px;
