--- a/src/css/ItemTable.scss
+++ b/src/css/ItemTable.scss
@@ -9,9 +9,9 @@
         }
     }
 
+    // fixed headers
     th {
-        // fixed headers
-        z-index: 1;
+        z-index: 1; // required to remain in the foreground when cells contain masks
         position: sticky;
         top: 0;
         border: 0 !important;
