style: css modification on dashboardTab (with scss).

--- a/src/css/util.scss
+++ b/src/css/util.scss
@@ -1,1 +1,9 @@
 $img: "../images";
+
+.AdminButton:hover {
+    &:hover {
+        cursor: pointer;
+        background-color: darkturquoise;
+        border-color: darkturquoise;
+    }
+}
