--- a/src/css/util.scss
+++ b/src/css/util.scss
@@ -5,5 +5,6 @@ $img: "../images";
         cursor: pointer;
         background-color: darkturquoise;
         border-color: darkturquoise;
+        color: black;
     }
 }
