--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,10 @@
     width: 100%;
 }
 
+#tabs-tabpane-dashboard{
+    overflow-y: auto;
+}
+
 .loadingLoginButton {
     display: flex;
     align-items: center;
@@ -59,22 +63,6 @@
     background-color: transparent;
     font-size: small;
     cursor: pointer;
-}
-
-.newUserButton {
-    display: flex;
-    align-items: center;
-}
-
-.newUserButton::before {
-    content: "";
-    mask: url("./images/new-user.svg");
-    mask-size: contain;
-    mask-repeat: no-repeat;
-    width: 1.5em;
-    height: 1.2em;
-    margin-right: 0.5em;
-    background-color: white;
 }
 
 .rightRoundedInput {
@@ -115,113 +103,10 @@
     justify-content: space-between;
 }
 
-/* DashboardTab : */
-
-.dashboardPanelsContainer {
-    display: flex;
-    font-size: 18px;
-    font-family: "Open Sans", Arial, Helvetica, sans-serif;
-    padding: 1.25rem;
-    align-items: space-between;
-}
-
-.dashboardPanel {
-    display: flex;
-    width: 100%;
-    flex: 1;
-    margin: 1.25rem;
-    background-color: white;
-}
-
-#tabs-tabpane-dashboard .dashboardPanel{
-    margin-left: unset;
-}
-
-.dashboardPanel .card-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.dashboardPanelSection {
-    padding: 1rem;
-    font-size: 1rem;
-}
-
-.watcha-legend {
-    margin: 0.5rem;
-    padding: 1rem;
-    font-size: 1rem;
-    font-weight: bold;
-    width: auto;
-}
-
-.watcha-fieldset {
-    border: 2px solid;
-    border-width: 80%;
-    width: 100%;
-}
-
-.dashboardPanelSection tr:first-child td {
-    border: none;
-    margin-left: 1rem;
-}
-
-.watcha-fieldset tr:first-child td {
-    border: none;
-    margin-left: 1rem;
-}
-
-.sectionPanelData {
-    text-align: right;
-    font-weight: bold;
-}
-
-.sectionPanelAdminListLabel .card-header {
-    padding: unset;
-    background-color: unset;
-    border: unset;
-    display: inline-block;
-}
-
-.sectionPanelAdminListLabel .card-header:hover {
-    background-color: darkturquoise;
+.dismissRight {
     cursor: pointer;
     color: white;
 }
-
-.sectionPanelAdminListLabel .card {
-    margin: unset;
-    border: unset;
-}
-
-.sectionPanelAdminListLabel .adminUserRow:hover {
-    background-color: darkturquoise;
-    cursor: pointer;
-    color: white;
-}
-
-.dashboardAdministrateButton:hover {
-    cursor: pointer;
-    background-color: darkturquoise;
-    border-color: darkturquoise;
-}
-
-.noRoomsMessage {
-    font-weight: bold;
-}
-
-.tooltipMessage {
-    font-style: italic;
-}
-
-#tabs-tabpane-dashboard .refreshButton {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 20px;
-}
-
-/* end of DashboardTab : */
 
 .dismissRight {
     cursor: pointer;
@@ -252,10 +137,6 @@
     margin-right: 12px;
     font-size: 14px;
     background: #e3e3e3;
-}
-
-.AdminName {
-    cursor: pointer;
 }
 
 .TableAdvanced {
