--- a/src/css/ItemTable.scss
+++ b/src/css/ItemTable.scss
@@ -4,7 +4,8 @@
     col {
         width: 1%;
 
-        &.status {
+        &.status,
+        &.permalink {
             width: 0.0001%;
         }
     }
@@ -30,6 +31,10 @@
 
         &:hover {
             background-color: darkturquoise;
+        }
+
+        &.permalink:hover {
+            background-color: inherit;
         }
     }
 
