style: modification of inappropriate 'unset' css attribut

--- a/src/css/ExpandButton.scss
+++ b/src/css/ExpandButton.scss
@@ -1,7 +1,7 @@
 .ExpandButton {
     background-color: #f7f7f7;
     border-color: #dfdfdf;
-    box-shadow: unset;
+    box-shadow: initial;
     display: inline-flex;
     height: 100%;
 
