--- a/src/css/UsersDashboardPanel.scss
+++ b/src/css/UsersDashboardPanel.scss
@@ -7,12 +7,12 @@
     margin-bottom: 1.5em;
 
     .PanelRow_content {
-        width: unset;
+        width: initial;
         padding-left: 0.5em;
         padding-right: 0.5em;
 
         &:first-of-type {
-            border-top: unset;
+            border-top: 0;
         }
     }
 }
