--- a/src/css/DashboardPanel.scss
+++ b/src/css/DashboardPanel.scss
@@ -1,9 +1,6 @@
 .DashboardPanel {
-    display: flex;
     width: 100%;
-    flex: 1;
-    margin-top: 30px;
-    background-color: white;
+    margin-top: 2em;
 
     .card-header {
         display: flex;
@@ -13,7 +10,7 @@
     }
 }
 
-.DashboardPanel_body {
-    padding-left: 1em;
-    padding-right: 1em;
+.DashboardPanel_body{
+    padding-top: 0em;
+    padding-bottom: 0em;
 }
