--- a/src/css/NewItemButton.scss
+++ b/src/css/NewItemButton.scss
@@ -1,19 +1,24 @@
 @import "util.scss";
 
 .NewItemButton {
-    .newUserButton {
-        display: flex;
-        align-items: center;
+    display: flex;
+    align-items: center;
 
-        &::before {
-            content: "";
-            mask: url("#{$img}/new-user.svg");
-            mask-size: contain;
-            mask-repeat: no-repeat;
-            width: 1.5em;
-            height: 1.2em;
-            margin-right: 0.5em;
-            background-color: white;
-        }
+    &::before {
+        content: "";
+        mask-size: contain;
+        mask-repeat: no-repeat;
+        width: 1.5em;
+        height: 1.2em;
+        margin-right: 0.5em;
+        background-color: white;
     }
+}
+
+.NewItemButton-user::before {
+    mask-image: url("#{$img}/new-user.svg");
+}
+
+.NewItemButton-room::before {
+    mask-image: url("#{$img}/new-user.svg");
 }
