--- a/src/css/PanelRow.scss
+++ b/src/css/PanelRow.scss
@@ -1,8 +1,7 @@
-.PanelRow_content {
+.PanelRow {
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    margin: 0.5em;
+    margin-bottom: 1em;
     padding-top: 1em;
     border-top: solid 1px #dfdfdf;
 
