--- a/src/css/DashboardPanel.scss
+++ b/src/css/DashboardPanel.scss
@@ -10,7 +10,7 @@
     }
 }
 
-.DashboardPanel_body{
-    padding-top: 0em;
-    padding-bottom: 0em;
+.DashboardPanel_body {
+    padding-top: 0;
+    padding-bottom: 0;
 }
