--- a/src/css/DashboardPanel.scss
+++ b/src/css/DashboardPanel.scss
@@ -14,3 +14,8 @@
     padding-top: 0;
     padding-bottom: 0;
 }
+
+.DashboardPanel_noRoomMessage {
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
