feat: addition of new icon

--- a/src/css/Status.scss
+++ b/src/css/Status.scss
@@ -23,7 +23,7 @@
     }
 
     &.new {
-        mask: url("#{$img}/new.svg");
+        mask: url("#{$img}/new-room.svg");
         background-color: black;
     }
 }
