Watcha OP415  addition of new icon (#44)
* feat: addition of new icon

* feat: modification of icon for new room

* feat: re-addition of new room and new user icon

* feat: addition of a tooltip on NewItemButton

* i18n: better wording

--- a/src/css/NewItemButton.scss
+++ b/src/css/NewItemButton.scss
@@ -16,9 +16,9 @@
 }
 
 .NewItemButton-user::before {
-    mask-image: url("#{$img}/new-user.svg");
+    mask-image: url("#{$img}/new-user-btn.svg");
 }
 
 .NewItemButton-room::before {
-    mask-image: url("#{$img}/new-user.svg");
+    mask-image: url("#{$img}/new-room-btn.svg");
 }
