fix: set thead height to bypass Firefox issue

--- a/src/css/ItemTable.scss
+++ b/src/css/ItemTable.scss
@@ -50,6 +50,11 @@
     td {
         height: 100%;
     }
+
+    // required to fix Firefox issue
+    thead {
+        height: 1em;
+    }
 }
 
 .ItemTable_header {
