fix: add background on RoomPermalink table header

--- a/src/css/ItemTable.scss
+++ b/src/css/ItemTable.scss
@@ -34,7 +34,7 @@
         }
 
         &.permalink:hover {
-            background-color: inherit;
+            background-color: white;
         }
     }
 
